Bug 1230106 - added assert on animVal. r=longsonr